# sc.todolist.rust

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  init.sql
app/: Cargo.toml
app/src/: dtos.rs  errors.rs  lib.rs  logs.rs  repos.rs  tasks.rs
client/: Dockerfile  package-lock.json
client/src/: app.html
client/src/lib/: api.js
client/src/routes/: +layout.svelte  +page.server.js
client/src/routes/logs/: +page.svelte
client/src/routes/tasks/: +page.svelte  CreateTaskModal.svelte  TaskRow.svelte
client/src/routes/tasks/[taskId]/: +page.svelte  SearchRootModal.svelte
domain/: Cargo.toml
domain/src/: enums.rs  lib.rs  models.rs
infrastructure/: Cargo.toml
infrastructure/src/: convert.rs  db.rs  lib.rs
migrations/: 20231026140812_init.down.sql  20231026140812_init.up.sql
webapi/: Cargo.toml
webapi/src/: logs_handle.rs  main.rs  tasks_handle.rs  view.rs
