[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
app = { path = "../app" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono", "uuid" ] }
async-trait = "0.1.74"
chrono = { version = "0.4" }
uuid = { version = "1.5.0", features = [ "v4", "fast-rng", "serde" ] }