[package]
name = "webapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.107"
uuid = { version = "1.5.0", features = [ "serde" ] }
tower-http = { version = "0.4.0", features = ["cors"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }

infrastructure = { path = "../infrastructure" }
app = { path = "../app" }